# hello-friends-connect

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  Trunk.toml  index.html  nginx.conf  package-lock.json  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
k8s/: main-ingress-backup.yaml
k8s/base/: deployment.yaml  ingress-patch.yaml  service.yaml
src/: connect_component.rs  connection_item.rs  connection_modal.rs  connection_utils.rs  connection_utils_test.rs  lib.rs  main.rs  modal from game.txt
