[package]
name = "hello-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
uuid = {version = "1.12.1", features = ["v4","js"]}
gloo-timers = {version = "0.3.0", features=["futures"]}
js-sys = "0.3.64"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "Storage",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
